Reset password popup text overflowing fixed

--- a/src/components/PopUp/RequestPasswordPopUp/RequestPasswordPopUp.scss
+++ b/src/components/PopUp/RequestPasswordPopUp/RequestPasswordPopUp.scss
@@ -56,7 +56,7 @@
       }
   
       .ok_button {
-        width: 20%;
+        width: max-content;
         height: 50px;
         flex-shrink: 0;
         border-radius: 10px;
@@ -114,12 +114,11 @@
         right: 10px;
         background: none;
         border: none;
-        font-size: 14px;
+        font-size: 12px;
         cursor: pointer;
       }
   
       .ok_button {
-        width: 20%;
         height: 30px;
         flex-shrink: 0;
         border-radius: 10px;
@@ -127,7 +126,7 @@
         color: #fff;
         text-align: center;
         font-family: Poppins;
-        font-size: 14px;
+        font-size: 12px;
         font-style: normal;
         font-weight: 600;
         line-height: normal;
